--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Wojciech Bartnik <yisonPylkita@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+rocket = "0.4"
+diesel = { version = "1.4", features = ["postgres"] }
+dotenv = "0.15"
